# gdbuf

./: .gitignore  .gitmodules  .releaserc.json  AGENTS.md  Makefile  README.md  TODO.md  go.mod  go.sum  log_output.txt  main.go
.github/workflows/: release.yaml
docs/: AGENTS.md  API.md  DEV.md  FEATURES.md
gdextension/: .gitignore  Makefile  build_profile.json
gdextension/cmake/: aarch64-linux.toolchain.cmake  arm-linux.toolchain.cmake  web-wasm32.toolchain.cmake  x86_64-linux.toolchain.cmake
internal/codegen/: codegen.go  cpp.go  gdextension.go  godot.go  godot_test.go  template.go
internal/codegen/templates/: refcounted.cpp.tmpl  refcounted.h.tmpl
internal/codegen/templates/doc/: class_doc.xml.tmpl
internal/codegen/templates/gdextension/: CMakeLists.txt.tmpl  gde-protobuf.gdextension.tmpl  vcpkg.json.tmpl
internal/codegen/templates/src/: register_types.cpp.tmpl
internal/gdextension/: gdextension.go
internal/gdextension/buildenv/: Makefile  build_profile.json
internal/gdextension/buildenv/cmake/: aarch64-linux.toolchain.cmake  android.toolchain.cmake  arm-linux.toolchain.cmake  i686-linux.toolchain.cmake  i686-windows.toolchain.cmake  web-wasm32.toolchain.cmake  x86_64-linux.toolchain.cmake  x86_64-windows.toolchain.cmake
internal/gdextension/buildenv/triplets/: x64-windows-gde.cmake
internal/protoc/: protoc.go
test/: README.md
test/genout-all/: CMakeLists.txt
test/genout-all/doc_classes/: BasicTestMessage.xml  DependencyMessage.xml  GoogleWellKnownTypesMessage.xml  MapMessage.xml  OneOfMessage.xml  OuterNestedMessageInnerNestedMessage.xml  ReservedMessage.xml
test/genout-all/src/: global_enums.cpp  global_enums.h  messages.h  register_types.cpp
test/genout-all/src/google/protobuf/: any.pb.c  any.pb.h  duration.pb.h  empty.pb.c  empty.pb.h  field_mask.pb.c  field_mask.pb.h  struct.pb.c  struct.pb.h  timestamp.pb.c  timestamp.pb.h  wrappers.pb.c  wrappers.pb.h
test/genout-all/src/test/proto/: dependency.cpp  dependency.h  dependency.pb.c  dependency.pb.h  gdbuf_test.cpp  gdbuf_test.h  gdbuf_test.pb.c  gdbuf_test.pb.h
test/genout-all/src/test/proto/nested/deeply/: nested.cpp  nested.h  nested.pb.c  nested.pb.h
test/godot_project/: .gitignore  project.godot  test_runner.gd  test_runner.gd.uid
test/out-all/doc_classes/: DeeplyNestedMessage.xml  EverythingMessage.xml  OuterNestedMessage.xml  RecursiveMessage.xml  RepeatedComplexMessage.xml  SpecialFieldTypesMessage.xml  gdbufgenEnums.xml
test/proto/: dependency.proto  gdbuf_test.proto
test/proto/nested/deeply/: nested.proto
(+10 files in other folders)
